chore: update translations

--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "Ces paramètres ne sont pas marqués comme étant stables.",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Patienter",
   "INTERNET_ERROR": "Aucune connexion Internet",
@@ -132,6 +133,7 @@
   "REMOVE": "Retirer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
   "REPEAT": "Répéter",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
   "RETRIEVING_LINK": "Récupération du flux",
@@ -178,7 +180,7 @@
   "SHARE": "Partager",
   "SHOW_ALBUM": "Visualiser l'album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Basculer sur l'écran \"En cours de lecture\" lors de la lecture",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Afficher l'écran \"En cours de lecture\" après la sélection d'une piste pour lecture",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Activer l'icône dans la barre des tâches",
@@ -200,6 +202,7 @@
   "TRANSFERS": "Transferts",
   "UNMUTE": "Réactiver le son",
   "UPDATE_AVAILABLE": "Mise à jour disponible : VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Vidéo",
   "WARNING": "Attention",
   "WEB": "YT Music",
