--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
@@ -132,6 +133,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
@@ -178,7 +180,7 @@
   "SHARE": "शेयर",
   "SHOW_ALBUM": "Show album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -200,6 +202,7 @@
   "TRANSFERS": "ट्रांसफर्स",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "चेतावनी",
   "WEB": "YT Music",
