--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "KE PENGATURAN",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Tunggu",
   "INTERNET_ERROR": "Cek koneksi internet anda.",
@@ -132,6 +133,7 @@
   "REMOVE": "Hapus",
   "REMOVE_FROM_PLAYLIST": "Hapus dari daftar putar",
   "REPEAT": "Ulangi",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Hasil dari \"QUERY\"",
   "RETRIEVING_INFO": "Mengambil info",
   "RETRIEVING_LINK": "Mengambil stream",
@@ -178,7 +180,7 @@
   "SHARE": "Bagikan",
   "SHOW_ALBUM": "Tunjukkan album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Lompat ke layar lagu yang sedang dimainkan",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Tunjukkan \"Layar lagu yang sedang dimainkan\" setelah sebuah trek dipilih",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Aktifkan indikator taskbar",
@@ -200,6 +202,7 @@
   "TRANSFERS": "Transfer",
   "UNMUTE": "Hidupkan suara",
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Peringatan",
   "WEB": "YT Musik",
