--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "設定に移動する",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
@@ -132,6 +133,7 @@
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
@@ -178,7 +180,7 @@
   "SHARE": "共有",
   "SHOW_ALBUM": "アルバムを表示",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "再生したら再生中画面にジャンプ",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "再生するトラックを選択したら\"再生中画面\"を表示する",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーインジケーターを有効にする",
@@ -200,6 +202,7 @@
   "TRANSFERS": "転送",
   "UNMUTE": "ミュート解除",
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "ビデオ",
   "WARNING": "注意",
   "WEB": "YT Music",
