--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "Te nastavitve še niso stabilne.",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Počakajte",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
@@ -132,6 +133,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Ponavljaj",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
@@ -178,7 +180,7 @@
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Avtomatično preskoči na \"Now playing\" zaslon ko se predvaja pesem",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -200,6 +202,7 @@
   "TRANSFERS": "Prenosi",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Posodobitev na voljo: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
