--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "وضعیت اتصال خود را بررسی کنید.",
@@ -132,6 +133,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "نتیجه‌های \"QUERY\"",
   "RETRIEVING_INFO": "در حال گرفتن اطلاعات",
   "RETRIEVING_LINK": "در حال گرفتن جریان",
@@ -178,7 +180,7 @@
   "SHARE": "اشتراک گذاری",
   "SHOW_ALBUM": "دیدن آلبوم",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -200,6 +202,7 @@
   "TRANSFERS": "انتقالات",
   "UNMUTE": "با صدا",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "هشدار",
   "WEB": "یوتیوب",
