--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
@@ -132,6 +133,7 @@
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
@@ -178,7 +180,7 @@
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Mostrar album",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Pular para a Tela Em Execução ao reproduzir",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Mostrar \"Tela Em Execução\" depois que uma faixa é selecionada para reprodução",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Ativar indicador da barra de tarefas",
@@ -200,6 +202,7 @@
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "WEB": "YT Music",
