--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
@@ -132,6 +133,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
@@ -178,7 +180,7 @@
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -200,6 +202,7 @@
   "TRANSFERS": "ПЕРЕДАЧИ",
   "UNMUTE": "Включить звук",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Видео",
   "WARNING": "Предупреждение",
   "WEB": "YT Music",
