--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -69,6 +69,7 @@
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
   "GO_TO_SETTINGS": "AYARLARA GİT",
+  "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "İnternet bağlantını kontrol et",
@@ -132,6 +133,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
   "REPEAT": "Tekrar",
+  "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
   "RETRIEVING_LINK": "Bağlantı getiriliyor...",
@@ -178,7 +180,7 @@
   "SHARE": "Paylaş",
   "SHOW_ALBUM": "Albümü görüntüle",
   "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Hide lyrics",
+  "SHOW_LYRICS": "Show lyrics",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -200,6 +202,7 @@
   "TRANSFERS": "Transferler",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "UYARI",
   "WEB": "YT Music",
