--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -11,7 +11,7 @@
   "ARTIST": "Künstler",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Fügen Sie nach der Zusammenstellung des Albums automatisch andere Songs aus der Sammlung zur aktuellen Wiedergabe hinzu",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
