intl: update translations

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A'dan Z'yə",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Yüklənir",
   "CANCEL": "Ləğv et",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Növbəti",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Yarat",
   "CREATE_NEW_PLAYLIST": "Yeni oynatma sırası yarat",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma sırasından sil",
   "REPEAT": "Təkrar et",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" üçün nəticələr",
   "RETRIEVING_INFO": "Bilgilər gətirilir...",
