--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A bis Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Minimale Grafiken im Hintergrund des Bildschirminhalts anzeigen",
   "BACKGROUND_ARTWORK_TITLE": "Hintergrundgrafiken aktivieren",
+  "BETA": "Beta",
   "BUFFERING": "Buffering...",
   "CANCEL": "ABBRECHEN",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Ändern Sie die Farbe der \"Läuft Gerade Leiste\" basierend auf der jeweiligen Musik",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Entfernen von \"TRACK_NAME\" aus \"PLAYLIST_NAME\"?",
   "COMING_UP": "Demnächst",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Link kopieren",
   "CREATE": "erstellen",
   "CREATE_NEW_PLAYLIST": "NEUE PLAYLIST ERSTELLEN",
@@ -62,7 +64,7 @@
   "ENABLE_125_SCALING": "125% Skalierung aktivieren.",
   "ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Blur-Effekt aktivieren",
   "EXIT_FULLSCREEN": "Exit fullscreen",
-  "EXIT_NOW_PLAYING": "\"Läuft gerade\" beenden" ,
+  "EXIT_NOW_PLAYING": "\"Läuft gerade\" beenden",
   "EXIT_SUBTITLE": "Möchten Sie Harmonoid beenden?",
   "EXIT_TITLE": "beenden",
   "EXPERIMENTAL": "Experimentell",
@@ -133,6 +135,7 @@
   "REMOVE": "Entfernen",
   "REMOVE_FROM_PLAYLIST": "aus Playlist entfernen",
   "REPEAT": "Wiederholung",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Ergebnisse für \"QUERY\"",
   "RETRIEVING_INFO": "Informationen abrufen",
@@ -200,11 +203,9 @@
   "TRACKS_FROM_ARTIST": "Songs von diesen Künstler.",
   "TRACK_SINGLE": "Song",
   "TRANSFERS": "Transfers",
-  "UNMUTE": "Stummschaltung aufheben",
-  "UPDATE_AVAILABLE": "Update verfügbar: VERSION",
-  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warnung",
   "WEB": "YT Music",
