--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Mise en cache...",
   "CANCEL": "Annuler",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Changer la couleur de la barre \"En cours de lecture\" en fonction de la musique",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous certain de vouloir supprimer cette piste ?",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Supprimer \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "À venir",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copier le lien",
   "CREATE": "Créer",
   "CREATE_NEW_PLAYLIST": "Créer une nouvelle playlist",
@@ -133,6 +135,7 @@
   "REMOVE": "Retirer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
   "REPEAT": "Répéter",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
