--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A ke Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Buffering...",
   "CANCEL": "BATAL",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Ganti warna \"Bar lagu yang sedang dimainkan\" berdasarkan musik",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Hapus",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Hapus \"TRACK_NAME\" dari \"PLAYLIST_NAME\"?",
   "COMING_UP": "Lagu Selanjutnya",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Salin link",
   "CREATE": "Buat",
   "CREATE_NEW_PLAYLIST": "BUAT DAFTAR PUTAR BARU",
@@ -133,6 +135,7 @@
   "REMOVE": "Hapus",
   "REMOVE_FROM_PLAYLIST": "Hapus dari daftar putar",
   "REPEAT": "Ulangi",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Hasil dari \"QUERY\"",
   "RETRIEVING_INFO": "Mengambil info",
