--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A から Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "音楽に合わせて\"再生中バー\"の色を変える",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "\"TRACK_NAME\"を\"PLAYLIST_NAME\"から削除しますか？",
   "COMING_UP": "次の曲",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "リンクをコピー",
   "CREATE": "作成",
   "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
@@ -133,6 +135,7 @@
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
