--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Mostrar arte mínima por trás do conteúdo na tela",
   "BACKGROUND_ARTWORK_TITLE": "Ativar arte de fundo",
+  "BETA": "Beta",
   "BUFFERING": "Carregando...",
   "CANCEL": "CANCELAR",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Mude a cor de \"Barra Tocando Agora\" baseado na música",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você deseja apagar?",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remover \"TRACK_NAME\" de \"PLAYLIST_NAME\"?",
   "COMING_UP": "Chegando",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copiar link",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
@@ -133,6 +135,7 @@
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
