--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "Od A do Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Zamenjaj barvo \"Now Playing Bar\" glede na glasbo, ki jo poslušaš",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Naslednje",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Ustvari",
   "CREATE_NEW_PLAYLIST": "USTVARI NOV SEZNAM PREDVAJANJA",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Ponavljaj",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
