--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A 到 Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "在屏幕上的内容后面显示最少的艺术作品",
   "BACKGROUND_ARTWORK_TITLE": "启用背景艺术作品",
+  "BETA": "Beta",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "根据音乐更改“正在播放栏”的颜色",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "删除",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "从 \"PLAYLIST_NAME\" 中移除 \"TRACK_NAME\" 吗?",
   "COMING_UP": "当前播放",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "复制链接",
   "CREATE": "创建",
   "CREATE_NEW_PLAYLIST": "创建新的播放列表",
@@ -133,6 +135,7 @@
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "重复",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" 结果",
   "RETRIEVING_INFO": "获取详情中",
