--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A تا Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "بافرینگ...",
   "CANCEL": "لغو",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "حذف کردن",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "بالا آمدن",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "ساخت",
   "CREATE_NEW_PLAYLIST": "ساختن لیست پخش جدید",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "نتیجه‌های \"QUERY\"",
   "RETRIEVING_INFO": "در حال گرفتن اطلاعات",
