--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A से Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "बफर हो रहा है...",
   "CANCEL": "कैंसिल",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "अगला आनेवाला",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Create",
   "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
