--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "По алфавиту",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "В очереди",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Создать",
   "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
