--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A till Ö",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Radera",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Kommer Härnäst",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Skapa",
   "CREATE_NEW_PLAYLIST": "SKAPA NY SPELLISTA",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
   "REPEAT": "Repeat",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
   "RETRIEVING_INFO": "Hämtar info",
