--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -18,6 +18,7 @@
   "A_TO_Z": "A'dan Z'ye",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BETA": "Beta",
   "BUFFERING": "Yükleniyor",
   "CANCEL": "İPTAL",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
@@ -46,6 +47,7 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Sil",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "Sırada",
+  "CONTROL_PANEL": "Control Panel",
   "COPY_LINK": "Copy link",
   "CREATE": "Oluştur",
   "CREATE_NEW_PLAYLIST": "Yeni oynatma listesi oluştur",
@@ -133,6 +135,7 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
   "REPEAT": "Tekrar",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
