--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -61,15 +61,15 @@
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
-  "EXIT_FULLSCREEN": "Exit fullscreen",
+  "EXIT_FULLSCREEN": "Sair da tela cheia",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
-  "FULLSCREEN": "Enter fullscreen",
+  "FULLSCREEN": "Entrar em tela cheia",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
-  "HIDE_LYRICS": "Hide lyrics",
+  "HIDE_LYRICS": "Ocultar letras",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
@@ -133,7 +133,7 @@
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
-  "RESET_SPEED": "Reset speed",
+  "RESET_SPEED": "Redefinir velocidade",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
@@ -180,7 +180,7 @@
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Mostrar album",
   "SHOW_IN_FILE_MANAGER": "Mostrar no gerenciador de arquivos",
-  "SHOW_LYRICS": "Show lyrics",
+  "SHOW_LYRICS": "Mostrar letras",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Pular para a Tela Em Execução ao reproduzir",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Mostrar \"Tela Em Execução\" depois que uma faixa é selecionada para reprodução",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Ativar indicador da barra de tarefas",
@@ -202,7 +202,7 @@
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
-  "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_MODERN_NOW_PLAYING_SCREEN": "Use a moderna \"Tela Reproduzindo\" com planos de fundo dinâmicos e letras sincronizadas no tempo",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "WEB": "YT Music",
