feat: details editor screen

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "zur Playlist hinzufügen",
   "ALBUM": "Alben",
   "ALBUMS_FROM_ARTIST": "Alben von diesen Künstler",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Künstler",
   "ARTIST_SINGLE": "Künstler",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimentell",
   "EXPERIMENTAL_SUBTITLE": "Diese Einstellungen sind noch nicht als konstant(stable) markiert",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "ZU EINSTELLUNGEN",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Ein mit der Indizierung verbundener Vorgang ist bereits im Gange. Bitte gedulden Sie sich noch etwas.",
@@ -137,9 +139,11 @@
   "REPEAT": "Wiederholung",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Ergebnisse für \"QUERY\"",
   "RETRIEVING_INFO": "Informationen abrufen",
   "RETRIEVING_LINK": "Stream abrufen",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "als Playlist speichern",
   "SAVE_TO_DOWNLOADS": "unter Downloads speichern",
   "SEARCH": "Suchen",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "Songs",
   "TRACKS_FROM_ARTIST": "Songs von diesen Künstler.",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Song",
   "TRANSFERS": "Transfers",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warnung",
   "WEB": "YT Music",
