--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "प्लेलिस्ट में जोड़ें",
   "ALBUM": "एल्बम",
   "ALBUMS_FROM_ARTIST": "Albums from this artist.",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "कलाकार",
   "ARTIST_SINGLE": "Artist",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Repeat",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
   "SEARCH": "खोज़े",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "गाने",
   "TRACKS_FROM_ARTIST": "Tracks from this artist.",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "ट्रांसफर्स",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "चेतावनी",
   "WEB": "YT Music",
