--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "プレイリストに追加",
   "ALBUM": "アルバム",
   "ALBUMS_FROM_ARTIST": "アルバム",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "アルバム",
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "設定に移動する",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
@@ -137,9 +139,11 @@
   "REPEAT": "リピート",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "プレイリストとして保存",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
   "SEARCH": "検索",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "システム",
   "TRACK": "トラック",
   "TRACKS_FROM_ARTIST": "トラック",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
   "UNMUTE": "ミュート解除",
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "ビデオ",
   "WARNING": "注意",
   "WEB": "YT Music",
