--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Ampio amin'ny filaharan-kira",
   "ALBUM": "Rakikira",
   "ALBUMS_FROM_ARTIST": "Rakikira an'ity mpanakanto ity.",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Rakikira",
   "ARTIST": "Mpanakanto",
   "ARTIST_SINGLE": "Mpanakanto",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Repeat",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Tehirizo amin'ny fisintomana",
   "SEARCH": "Fikarohana",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "Mozika",
   "TRACKS_FROM_ARTIST": "Hiranity mpanakanto ity.",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Hira",
   "TRANSFERS": "Famindrana",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Tandremo",
   "WEB": "YT Music",
