--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Dodaj na seznam predvajanja",
   "ALBUM": "Albumi",
   "ALBUMS_FROM_ARTIST": "Albumi od tega ustvarjalca.",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Skladatelji",
   "ARTIST_SINGLE": "Ustvarjalec",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Eksperimentalno",
   "EXPERIMENTAL_SUBTITLE": "Te nastavitve še niso stabilne.",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
@@ -137,9 +139,11 @@
   "REPEAT": "Ponavljaj",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Shrani kot seznam predvajanja",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
   "SEARCH": "Išči",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "Sistemska nastavitev",
   "TRACK": "Pesmi",
   "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Posodobitev na voljo: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
