--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Lägg till spellista",
   "ALBUM": "Album",
   "ALBUMS_FROM_ARTIST": "Album av denna artist.",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artister",
   "ARTIST_SINGLE": "Artist",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Repeat",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
   "SEARCH": "Sök",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "Låtar",
   "TRACKS_FROM_ARTIST": "Låtar",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Låt",
   "TRANSFERS": "Överföringar",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Varning",
   "WEB": "YT Music",
