--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Oynatma sırasına əlavə et",
   "ALBUM": "Albomlar",
   "ALBUMS_FROM_ARTIST": "Sənətçidən albomlar",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Albom",
   "ARTIST": "Sanatçılar",
   "ARTIST_SINGLE": "Sənətçi",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "Tənzimləmələrə get",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Təkrar et",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "\"QUERY\" üçün nəticələr",
   "RETRIEVING_INFO": "Bilgilər gətirilir...",
   "RETRIEVING_LINK": "Bağlantı gətirilir...",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Yüklənənlərə qeyd et",
   "SEARCH": "Axtar",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "Sistem",
   "TRACK": "Musiqi",
   "TRACKS_FROM_ARTIST": "Musiqilər",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Musiqi",
   "TRANSFERS": "Transferlər",
   "UNMUTE": "SƏSSİZDƏN ÇIXAR",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "BİLDİRİŞ",
   "WEB": "YT Music",
