--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "اضافه کردن به لیست پخش",
   "ALBUM": "آلبوم‌ها",
   "ALBUMS_FROM_ARTIST": "آلبوم‌ها",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "آلبوم‌ها",
   "ARTIST": "هنرمندان",
   "ARTIST_SINGLE": "هنرمند",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "تکرار",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "نتیجه‌های \"QUERY\"",
   "RETRIEVING_INFO": "در حال گرفتن اطلاعات",
   "RETRIEVING_LINK": "در حال گرفتن جریان",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "ذخیره در دانلود‌ها",
   "SEARCH": "جستجو",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "بر اساس دستگاه",
   "TRACK": "موسیقی‌",
   "TRACKS_FROM_ARTIST": "موسیقی‌ها",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "موسیقی",
   "TRANSFERS": "انتقالات",
   "UNMUTE": "با صدا",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "هشدار",
   "WEB": "یوتیوب",
