--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Hozzáadás lejátszási listához",
   "ALBUM": "Albumok",
   "ALBUMS_FROM_ARTIST": "Az előadó albumjai:",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Előadók",
   "ARTIST_SINGLE": "Előadó",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Repeat",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
   "SEARCH": "Keresés",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "Számok",
   "TRACKS_FROM_ARTIST": "Számok az előadótól:",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Szám",
   "TRANSFERS": "Átvitelek",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "WEB": "YT Music",
