--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Tambahkan ke daftar putar",
   "ALBUM": "Album",
   "ALBUMS_FROM_ARTIST": "Album",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artis",
   "ARTIST_SINGLE": "Artis",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
@@ -137,9 +139,11 @@
   "REPEAT": "Ulangi",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Hasil dari \"QUERY\"",
   "RETRIEVING_INFO": "Mengambil info",
   "RETRIEVING_LINK": "Mengambil stream",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Simpan sebagai daftar putar",
   "SAVE_TO_DOWNLOADS": "Simpan ke Unduhan",
   "SEARCH": "Cari",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "Sistem",
   "TRACK": "Trek",
   "TRACKS_FROM_ARTIST": "Trek",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Trek",
   "TRANSFERS": "Transfer",
   "UNMUTE": "Hidupkan suara",
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Peringatan",
   "WEB": "YT Musik",
