--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Adicionar à playlist",
   "ALBUM": "Álbuns",
   "ALBUMS_FROM_ARTIST": "Álbuns deste artista.",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artistas",
   "ARTIST_SINGLE": "Artista",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
   "FULLSCREEN": "Entrar em tela cheia",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "HIDE_LYRICS": "Ocultar letras",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
@@ -135,11 +137,13 @@
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
+  "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Redefinir velocidade",
-  "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Salvar como playlist",
   "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
   "SEARCH": "Procurar",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "Sistema",
   "TRACK": "Músicas",
   "TRACKS_FROM_ARTIST": "Faixas deste artista.",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use a moderna \"Tela Reproduzindo\" com planos de fundo dinâmicos e letras sincronizadas no tempo",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "WEB": "YT Music",
