--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -7,6 +7,7 @@
   "ADD_TO_PLAYLIST": "Oynatma listesine ekle",
   "ALBUM": "Albümler",
   "ALBUMS_FROM_ARTIST": "Albümler",
+  "ALBUM_ARTIST": "Album Artist",
   "ALBUM_SINGLE": "Albüm",
   "ARTIST": "Sanatçılar",
   "ARTIST_SINGLE": "Sanatçı",
@@ -70,6 +71,7 @@
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
   "FULLSCREEN": "Enter fullscreen",
+  "GENRE": "Genre",
   "GO_TO_SETTINGS": "AYARLARA GİT",
   "HIDE_LYRICS": "Hide lyrics",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -137,9 +139,11 @@
   "REPEAT": "Tekrar",
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
+  "RESTORE": "Restore",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
   "RETRIEVING_LINK": "Bağlantı getiriliyor...",
+  "SAVE": "Save",
   "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "İndirilenlere kaydet",
   "SEARCH": "Ara",
@@ -201,11 +205,13 @@
   "THEME_MODE_SYSTEM": "Sistem",
   "TRACK": "Müzik",
   "TRACKS_FROM_ARTIST": "Müzikler",
+  "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Müzik",
   "TRANSFERS": "Transferler",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
+  "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "WARNING": "UYARI",
   "WEB": "YT Music",
