--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -1,6 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Proqram və inkişaf etdiriciləriylə bağlı bilgi",
   "ABOUT_TITLE": "Haqqında",
+  "ADD": "Add",
   "ADD_NEW_FOLDER": "Yeni qovluq əlavə et",
   "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "İndi Çalınanlara Əlavə Et",
@@ -213,6 +214,7 @@
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
+  "VISUALS": "Add or remove visuals visible during music playback",
   "WARNING": "BİLDİRİŞ",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Onlayn olana qədər cihazındakı bir musiqini oynata bilərsən.",
