--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -1,6 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Informatie over de app en haar ontwikkelaars",
   "ABOUT_TITLE": "Over",
+  "ADD": "Add",
   "ADD_NEW_FOLDER": "NIEUWE MAP TOEVOEGEN",
   "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Toevoegen aan nu afspelen",
@@ -213,6 +214,7 @@
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
+  "VISUALS": "Add or remove visuals visible during music playback",
   "WARNING": "Waarschuwing",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
