--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -1,6 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Informacije o nas...",
   "ABOUT_TITLE": "O nas",
+  "ADD": "Add",
   "ADD_NEW_FOLDER": "DODAJ NOV DIREKTORIJ",
   "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Dodaj v seznam predvajanja",
@@ -213,6 +214,7 @@
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
+  "VISUALS": "Add or remove visuals visible during music playback",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
