--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -1,6 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Information om applikationen & dess utvecklare",
   "ABOUT_TITLE": "Om",
+  "ADD": "Add",
   "ADD_NEW_FOLDER": "LÄGG TILL NY MAPP",
   "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Lägg till i spelas nu",
@@ -213,6 +214,7 @@
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
+  "VISUALS": "Add or remove visuals visible during music playback",
   "WARNING": "Varning",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
