--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -1,6 +1,7 @@
 {
   "ABOUT_SUBTITLE": "Uygulama ve geliştiricileri hakkında bilgi",
   "ABOUT_TITLE": "Hakkında",
+  "ADD": "Add",
   "ADD_NEW_FOLDER": "Yeni klasör ekle",
   "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Şimdi Çalınanlara Ekle",
@@ -213,6 +214,7 @@
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
+  "VISUALS": "Add or remove visuals visible during music playback",
   "WARNING": "UYARI",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Çevrimiçi olana kadar cihazındaki bir müziği oynatabilirsin.",
