chore(intl): update strings

--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Vidéo",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Attention",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
