--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Peringatan",
   "WEB": "YT Musik",
   "WEB_INTERNET_ERROR": "Mainkan musik lokal anda sambil menghubungkan kembali ke internet.",
