--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "ビデオ",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "注意",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
