--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "BİLDİRİŞ",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Onlayn olana qədər cihazındakı bir musiqini oynata bilərsən.",
