--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "هشدار",
   "WEB": "یوتیوب",
   "WEB_INTERNET_ERROR": "موزیک‌های خودتان را تا وقتی آنلاین شدید، پخش کنید.",
