--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Waarschuwing",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "We spelen wat lokale muziek af, totdat je terug online bent.",
