--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Aviso",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Vamos tocar sua música local, enquanto você fica online novamente..",
