--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Видео",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Предупреждение",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Пока можете послушать локальную музыку...",
