--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
