--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -215,6 +215,7 @@
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Video",
   "VISUALS": "Add or remove visuals visible during music playback",
+  "VISUALS_TITLE": "Visuals",
   "WARNING": "UYARI",
   "WEB": "YT Music",
   "WEB_INTERNET_ERROR": "Çevrimiçi olana kadar cihazındaki bir müziği oynatabilirsin.",
